PLFM-8108: Allows to filter AR search by concrete type