@@ -1860,7 +1860,7 @@ public class AccessRequirementManagerImplUnitTest {
 			new ManagedACTAccessRequirement().setId(2L).setName("two")
 		);
 		
-		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
+		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
 		when(accessRequirementDAO.getAccessRequirementProjectsMap(any())).thenReturn(Map.of(
 			1L, List.of(1L, 2L),
 			2L, List.of(1L)
@@ -1875,6 +1875,7 @@ public class AccessRequirementManagerImplUnitTest {
 		String reviewerId = null;
 		String projectId = null;
 		ACCESS_TYPE accessType = null;
+		String concreteType = null;
 		List<AccessRequirementSearchSort> sort = null;
 				
 		AccessRequirementSearchRequest request = new AccessRequirementSearchRequest()
@@ -1883,11 +1884,12 @@ public class AccessRequirementManagerImplUnitTest {
 			.setReviewerId(reviewerId)
 			.setRelatedProjectId(projectId)
 			.setAccessType(accessType)
+			.setType(concreteType)
 			.setSort(sort);
 		
 		AccessRequirementSearchResponse expected = new AccessRequirementSearchResponse().setResults(List.of(
-			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")),
-			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList())
+			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")).setType(ManagedACTAccessRequirement.class.getName()),
+			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList()).setType(ManagedACTAccessRequirement.class.getName())
 		));
 		
 		// Call under test
@@ -1895,7 +1897,7 @@ public class AccessRequirementManagerImplUnitTest {
 		
 		assertEquals(expected, result);
 		
-		verify(accessRequirementDAO).searchAccessRequirements(List.of(new AccessRequirementSearchSort().setField(AccessRequirementSortField.CREATED_ON)), nameSubs, arIds, reviewerId, null, accessType, NextPageToken.DEFAULT_LIMIT + 1, NextPageToken.DEFAULT_OFFSET);
+		verify(accessRequirementDAO).searchAccessRequirements(List.of(new AccessRequirementSearchSort().setField(AccessRequirementSortField.CREATED_ON)), nameSubs, arIds, reviewerId, null, accessType, concreteType, NextPageToken.DEFAULT_LIMIT + 1, NextPageToken.DEFAULT_OFFSET);
 		verify(accessRequirementDAO).getAccessRequirementProjectsMap(Set.of(1L, 2L));
 		verify(mockDaAuthManager).getAccessRequirementReviewers(Set.of(1L, 2L));
 		
@@ -1909,7 +1911,7 @@ public class AccessRequirementManagerImplUnitTest {
 			new ManagedACTAccessRequirement().setId(2L).setName("two")
 		);
 		
-		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
+		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
 		when(accessRequirementDAO.getAccessRequirementProjectsMap(any())).thenReturn(Map.of(
 			1L, List.of(1L, 2L),
 			2L, List.of(1L)
@@ -1924,6 +1926,7 @@ public class AccessRequirementManagerImplUnitTest {
 		String reviewerId = "2";
 		String projectId = "syn3";
 		ACCESS_TYPE accessType = ACCESS_TYPE.DOWNLOAD;
+		String concreteType = "concreteType";
 		List<AccessRequirementSearchSort> sort = List.of(new AccessRequirementSearchSort().setField(AccessRequirementSortField.NAME));
 				
 		AccessRequirementSearchRequest request = new AccessRequirementSearchRequest()
@@ -1932,11 +1935,12 @@ public class AccessRequirementManagerImplUnitTest {
 			.setReviewerId(reviewerId)
 			.setRelatedProjectId(projectId)
 			.setAccessType(accessType)
+			.setType(concreteType)
 			.setSort(sort);
 		
 		AccessRequirementSearchResponse expected = new AccessRequirementSearchResponse().setResults(List.of(
-			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")),
-			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList())
+			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")).setType(ManagedACTAccessRequirement.class.getName()),
+			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList()).setType(ManagedACTAccessRequirement.class.getName())
 		));
 		
 		// Call under test
@@ -1944,7 +1948,7 @@ public class AccessRequirementManagerImplUnitTest {
 		
 		assertEquals(expected, result);
 		
-		verify(accessRequirementDAO).searchAccessRequirements(sort, nameSubs, arIds, reviewerId, 3L, accessType, NextPageToken.DEFAULT_LIMIT + 1, NextPageToken.DEFAULT_OFFSET);
+		verify(accessRequirementDAO).searchAccessRequirements(sort, nameSubs, arIds, reviewerId, 3L, accessType, concreteType, NextPageToken.DEFAULT_LIMIT + 1, NextPageToken.DEFAULT_OFFSET);
 		verify(accessRequirementDAO).getAccessRequirementProjectsMap(Set.of(1L, 2L));
 		verify(mockDaAuthManager).getAccessRequirementReviewers(Set.of(1L, 2L));
 		
@@ -1959,7 +1963,7 @@ public class AccessRequirementManagerImplUnitTest {
 				new ManagedACTAccessRequirement().setId(3L).setName("three")
 		));
 		
-		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
+		when(accessRequirementDAO.searchAccessRequirements(any(), any(), any(), any(), any(), any(), any(), anyLong(), anyLong())).thenReturn(arList);
 		when(accessRequirementDAO.getAccessRequirementProjectsMap(any())).thenReturn(Map.of(
 			1L, List.of(1L, 2L),
 			2L, List.of(1L)
@@ -1974,6 +1978,7 @@ public class AccessRequirementManagerImplUnitTest {
 		String reviewerId = null;
 		String projectId = null;
 		ACCESS_TYPE accessType = null;
+		String concreteType = null;
 		List<AccessRequirementSearchSort> sort = null;
 				
 		AccessRequirementSearchRequest request = new AccessRequirementSearchRequest()
@@ -1982,12 +1987,13 @@ public class AccessRequirementManagerImplUnitTest {
 			.setReviewerId(reviewerId)
 			.setRelatedProjectId(projectId)
 			.setAccessType(accessType)
+			.setType(concreteType)
 			.setSort(sort)
 			.setNextPageToken(new NextPageToken(2, 0).toToken());
 		
 		AccessRequirementSearchResponse expected = new AccessRequirementSearchResponse().setResults(List.of(
-			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")),
-			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList())
+			new AccessRequirementSearchResult().setId("1").setName("one").setRelatedProjectIds(List.of("syn1", "syn2")).setReviewerIds(List.of("11", "22")).setType(ManagedACTAccessRequirement.class.getName()),
+			new AccessRequirementSearchResult().setId("2").setName("two").setRelatedProjectIds(List.of("syn1")).setReviewerIds(Collections.emptyList()).setType(ManagedACTAccessRequirement.class.getName())
 		)).setNextPageToken(new NextPageToken(2, 2).toToken());
 		
 		// Call under test
@@ -1995,7 +2001,7 @@ public class AccessRequirementManagerImplUnitTest {
 		
 		assertEquals(expected, result);
 		
-		verify(accessRequirementDAO).searchAccessRequirements(List.of(new AccessRequirementSearchSort().setField(AccessRequirementSortField.CREATED_ON)), nameSubs, arIds, reviewerId, null, accessType, 3, 0);
+		verify(accessRequirementDAO).searchAccessRequirements(List.of(new AccessRequirementSearchSort().setField(AccessRequirementSortField.CREATED_ON)), nameSubs, arIds, reviewerId, null, accessType, concreteType, 3, 0);
 		verify(accessRequirementDAO).getAccessRequirementProjectsMap(Set.of(1L, 2L));
 		verify(mockDaAuthManager).getAccessRequirementReviewers(Set.of(1L, 2L));
 		
